manifest-local.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teknoir-bootstrap
